--- a/stack.yaml
+++ b/stack.yaml
@@ -1,6 +1,9 @@
 resolver: lts-12.2
 packages:
   - '.'
+extra-deps:
+  - generic-data-0.3.0.0
+  - base-orphans-0.8
 nix:
   enable: false
   pure: false
